--- a/sass/layout/aside.scss
+++ b/sass/layout/aside.scss
@@ -46,7 +46,7 @@
                 h3{
                     margin: 5px 0;
                     width: 200px;
-                    font-weight: light;
+                    font-weight: lighter;
                 }
                 p{  
                     margin: 0;
