--- a/sass/pages/blog.scss
+++ b/sass/pages/blog.scss
@@ -58,10 +58,11 @@
                     max-height: 100%;
                     overflow: hidden;
                 }
-                p{
-                    max-width: 100%;
-                    max-height: 100%;
-                    overflow:hidden;
+                p{  
+                    display: -webkit-box;
+                    -webkit-line-clamp: 5;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;    
                 }
             }
         }
