--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -44,6 +44,7 @@
             &__additional{
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 font-size:large;
+
             }
         }
     }
@@ -180,7 +181,9 @@
                 margin: 5px 0;
             }
             &__p{
-                max-height: 65px;
+                display: -webkit-box;
+                -webkit-line-clamp: 4;
+                -webkit-box-orient: vertical;
                 overflow: hidden;
             }
             &__readMore{
