--- a/sass/pages/post.scss
+++ b/sass/pages/post.scss
@@ -6,9 +6,8 @@
     padding: 10px;
 }
 .postTitle{
-    padding: 10px ;
-    padding-left: 10%;
-    margin: 0;
+    margin: 10px;
+    margin-left: 35px;
     font-size: 50px;
     font-family: 'Playfair Display', serif;
 }
@@ -16,10 +15,13 @@
     grid-column: span 2;
     max-width: 100%;
     height: max-content;
-    padding: 30px;
+    padding: 0 30px;
+    display: flex;
+    flex-flow: column;
+    align-items: start;
     &__img{
         img {
-            width: 80%;
+            width: 100%;
             height: 60%;
             object-fit: cover;
             height: auto;
@@ -29,20 +31,18 @@
     }
     a{
         background-color: $style;
-        padding: 20px;
+        padding: 10px;
         border-radius: 10px;
         font-size: 25px;
-        margin: 10px 80px;
+        margin: 10px 0;
         text-decoration: none;
         color:$text;
         display: inline-block;
     }
     p{  
-        max-width: 80%;
         font-family:'Times New Roman', Times, serif;
         font-size: x-large;
         line-height: 30px;
         word-spacing: 3px;
-        margin: 0 auto;
     }
 }
